<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/fieldDarkGreen"
            android:elevation="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/field_data"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_background"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="?attr/myTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <EditText
                android:id="@+id/fieldSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_background"
                android:hint="@string/size"
                android:inputType="phone"
                android:padding="15dp"
                android:textColor="?attr/myTextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.skydoves.powerspinner.PowerSpinnerView
                android:id="@+id/spinnerView"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:hint="@string/defaultUnit"
                android:textColor="?attr/myTextColor"
                android:textColorHint="?attr/myTextColor"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.876"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.538"
                app:spinner_arrow_gravity="end"
                app:spinner_arrow_tint="?attr/myTextColor"
                app:spinner_divider_color="?attr/myTextColor"
                app:spinner_item_array="@array/unit"
                app:spinner_popup_animation="dropdown"
                app:spinner_popup_background="?attr/backgroundColor"
                app:spinner_popup_elevation="14dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>